all-sourcecode/learn-terraform-provision-eks-cluster/grafan-prometheus/ingress1.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: grafana1.sainath.quest
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: grafana
            port:
              number: 80
